tests/baselines/reference/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.errors.txt
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.ts(2,25): error TS6134: Parameter 'person' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.ts(3,9): error TS6133: Variable 'unused' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.ts(4,14): error TS6133: Variable 'maker' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.ts(4,20): error TS6134: Parameter 'child' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.ts(5,13): error TS6133: Variable 'unused2' has never been used.


==== tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.ts (5 errors) ====
    
    var greeter = function (person: string, person2: string) {
                            ~~~~~~~~~~~~~~
!!! error TS6134: Parameter 'person' has never been used.
        var unused = 20;
            ~~~~~~
!!! error TS6133: Variable 'unused' has never been used.
        function maker(child: string): void {
                 ~~~~~
!!! error TS6133: Variable 'maker' has never been used.
                       ~~~~~~~~~~~~~
!!! error TS6134: Parameter 'child' has never been used.
            var unused2 = 22;
                ~~~~~~~
!!! error TS6133: Variable 'unused2' has never been used.
        }
        person2 = "dummy value";
    }